# minsh

./: CMakeLists.txt  README.md
include/minsh/: ast.hpp  builtins.hpp  executor.hpp  parser.hpp  tokenizer.hpp  variables.hpp
src/: builtins.cpp  executor.cpp  main.cpp  parser.cpp  tokenizer.cpp  variables.cpp
